# llm-portal

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.configs/: database.yaml  google.yaml
scripts/: run_test.sh
src/: main.py
src/controllers/: embedding_controller.py
src/llm_portal/: __init__.py  app.py  bootstrap.py  dependencies.py  settings.py
src/llm_portal/adapters/: orm.py  provider_factory.py
src/llm_portal/adapters/embedding_providers/: base.py  vertexai.py
src/llm_portal/adapters/llm_providers/: __init__.py  base.py  vertexai.py
src/llm_portal/domains/: commands.py
src/llm_portal/domains/models/: embedded.py
src/llm_portal/entrypoints/rest/: app.py
src/llm_portal/entrypoints/rest/routers/: __init__.py  embedding.py
src/llm_portal/entrypoints/schemas/: __init__.py  embedded.py
src/llm_portal/service/: __init__.py
src/llm_portal/service/handlers/: __init__.py  command.py  event.py
src/llm_portal/service/handlers/command/: text_embedding.py
src/models/: embedding_schemas.py
src/services/: embedding_service.py
src/services/providers/: openai_provider.py  vertexai_provider.py
tests/: conftest.py  test_embedding_controller.py  test_embedding_schemas.py
tests/e2e/api/: test_embedding.py  test_embeddings.py
tests/providers/: test_openai_provider.py  test_vertexai_provider.py
tests/unit/: conftest.py  test_handler.py  test_text_embedding.py
