[tool.poetry]
name = "llm-portal"
version = "0.1.0"
description = ""
authors = ["delus <kid.clone.3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
pydantic = ">=2.11.4,<2.12.0"
httpx = ">=0.28.1,<0.29.0"
uvicorn = ">=0.34.2,<0.35.0"
vertexai = ">=1.71.1,<1.72.0"
google-cloud-aiplatform = ">=1.71.1,<1.72.0"
protobuf = ">=5.29.4,<5.30.0"
pytest = ">=8.3.5,<8.4.0"
pytest-asyncio = ">=0.26.0,<0.27.0"
python-dotenv = ">=1.1.0,<1.2.0"
ruff = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "W", "Q", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20